include/visa.h

    /*- VISA Types --------------------------------------------------------------*/
    typedef ViObject ViEvent;
    typedef ViEvent _VI_PTR ViPEvent;
    typedef ViUInt64 ViBusAddress;
    typedef ViUInt64 ViBusSize;
typedef ViUInt32 ViBusAddress;
typedef ViUInt32 ViBusSize;
    typedef ViUInt64 ViBusAddress64;
    typedef ViBusAddress64 _VI_PTR ViPBusAddress64;
    typedef ViUInt32 ViEventType;
    typedef ViEventType _VI_PTR ViPEventType;
    typedef ViUInt32 ViJobId;
    typedef ViJobId _VI_PTR ViPJobId;
    typedef ViBusAddress _VI_PTR ViPBusAddress;
    typedef va_list ViVAList;
    typedef ViStatus(_VI_FUNCH _VI_PTR ViHndlr)(ViSession vi, ViEventType eventType, ViEvent event, ViAddr userHandle);
    ViStatus _VI_FUNC viWaitOnEvent(ViSession vi, ViEventType inEventType, ViUInt32 timeout,
                                    ViPEventType outEventType, ViPEvent outContext);
    ViStatus _VI_FUNC viInstallHandler(ViSession vi, ViEventType eventType, ViHndlr handler,
                                       ViAddr userHandle);
    ViStatus _VI_FUNC viUninstallHandler(ViSession vi, ViEventType eventType, ViHndlr handler,
                                         ViAddr userHandle);
    /*- Basic I/O Operations ----------------------------------------------------*/

    ViStatus _VI_FUNC viRead(ViSession vi, ViPBuf buf, ViUInt32 cnt, ViPUInt32 retCnt);
    ViStatus _VI_FUNC viReadAsync(ViSession vi, ViPBuf buf, ViUInt32 cnt, ViPJobId jobId);
    ViStatus _VI_FUNC viReadToFile(ViSession vi, ViConstString filename, ViUInt32 cnt,
                                   ViPUInt32 retCnt);
    ViStatus _VI_FUNC viWrite(ViSession vi, ViConstBuf buf, ViUInt32 cnt, ViPUInt32 retCnt);
    ViStatus _VI_FUNC viWriteAsync(ViSession vi, ViConstBuf buf, ViUInt32 cnt, ViPJobId jobId);
    ViStatus _VI_FUNC viWriteFromFile(ViSession vi, ViConstString filename, ViUInt32 cnt,
                                      ViPUInt32 retCnt);
    ViStatus _VI_FUNC viAssertTrigger(ViSession vi, ViUInt16 protocol);
    ViStatus _VI_FUNC viReadSTB(ViSession vi, ViPUInt16 status);
    ViStatus _VI_FUNC viClear(ViSession vi);
    /*- Formatted and Buffered I/O Operations -----------------------------------*/

    ViStatus _VI_FUNC viSetBuf(ViSession vi, ViUInt16 mask, ViUInt32 size);
    ViStatus _VI_FUNC viFlush(ViSession vi, ViUInt16 mask);
    ViStatus _VI_FUNC viBufWrite(ViSession vi, ViConstBuf buf, ViUInt32 cnt, ViPUInt32 retCnt);
    ViStatus _VI_FUNC viBufRead(ViSession vi, ViPBuf buf, ViUInt32 cnt, ViPUInt32 retCnt);
    ViStatus _VI_FUNCC viPrintf(ViSession vi, ViConstString writeFmt, ...);
    ViStatus _VI_FUNC viVPrintf(ViSession vi, ViConstString writeFmt, ViVAList params);
    ViStatus _VI_FUNCC viSPrintf(ViSession vi, ViPBuf buf, ViConstString writeFmt, ...);
    ViStatus _VI_FUNC viVSPrintf(ViSession vi, ViPBuf buf, ViConstString writeFmt,
                                 ViVAList parms);
    ViStatus _VI_FUNCC viScanf(ViSession vi, ViConstString readFmt, ...);
    ViStatus _VI_FUNC viVScanf(ViSession vi, ViConstString readFmt, ViVAList params);
    ViStatus _VI_FUNCC viSScanf(ViSession vi, ViConstBuf buf, ViConstString readFmt, ...);
    ViStatus _VI_FUNC viVSScanf(ViSession vi, ViConstBuf buf, ViConstString readFmt,
                                ViVAList parms);
    ViStatus _VI_FUNCC viQueryf(ViSession vi, ViConstString writeFmt, ViConstString readFmt, ...);
    ViStatus _VI_FUNC viVQueryf(ViSession vi, ViConstString writeFmt, ViConstString readFmt,
                                ViVAList params);
    /*- Memory I/O Operations ---------------------------------------------------*/

    ViStatus _VI_FUNC viIn8(ViSession vi, ViUInt16 space,
                            ViBusAddress offset, ViPUInt8 val8);
    ViStatus _VI_FUNC viOut8(ViSession vi, ViUInt16 space,
                             ViBusAddress offset, ViUInt8 val8);
    ViStatus _VI_FUNC viIn16(ViSession vi, ViUInt16 space,
                             ViBusAddress offset, ViPUInt16 val16);
    ViStatus _VI_FUNC viOut16(ViSession vi, ViUInt16 space,
                              ViBusAddress offset, ViUInt16 val16);
    ViStatus _VI_FUNC viIn32(ViSession vi, ViUInt16 space,
                             ViBusAddress offset, ViPUInt32 val32);
    ViStatus _VI_FUNC viOut32(ViSession vi, ViUInt16 space,
                              ViBusAddress offset, ViUInt32 val32);
    ViStatus _VI_FUNC viIn64(ViSession vi, ViUInt16 space,
                             ViBusAddress offset, ViPUInt64 val64);
    ViStatus _VI_FUNC viOut64(ViSession vi, ViUInt16 space,
                              ViBusAddress offset, ViUInt64 val64);
    ViStatus _VI_FUNC viIn8Ex(ViSession vi, ViUInt16 space,
                              ViBusAddress64 offset, ViPUInt8 val8);
    ViStatus _VI_FUNC viOut8Ex(ViSession vi, ViUInt16 space,
                               ViBusAddress64 offset, ViUInt8 val8);
    ViStatus _VI_FUNC viIn16Ex(ViSession vi, ViUInt16 space,
                               ViBusAddress64 offset, ViPUInt16 val16);
    ViStatus _VI_FUNC viOut16Ex(ViSession vi, ViUInt16 space,
                                ViBusAddress64 offset, ViUInt16 val16);
    ViStatus _VI_FUNC viIn32Ex(ViSession vi, ViUInt16 space,
                               ViBusAddress64 offset, ViPUInt32 val32);
    ViStatus _VI_FUNC viOut32Ex(ViSession vi, ViUInt16 space,
                                ViBusAddress64 offset, ViUInt32 val32);
    ViStatus _VI_FUNC viIn64Ex(ViSession vi, ViUInt16 space,
                               ViBusAddress64 offset, ViPUInt64 val64);
    ViStatus _VI_FUNC viOut64Ex(ViSession vi, ViUInt16 space,
                                ViBusAddress64 offset, ViUInt64 val64);
    ViStatus _VI_FUNC viMoveIn8(ViSession vi, ViUInt16 space, ViBusAddress offset,
                                ViBusSize length, ViAUInt8 buf8);
    ViStatus _VI_FUNC viMoveOut8(ViSession vi, ViUInt16 space, ViBusAddress offset,
                                 ViBusSize length, ViAUInt8 buf8);
    ViStatus _VI_FUNC viMoveIn16(ViSession vi, ViUInt16 space, ViBusAddress offset,
                                 ViBusSize length, ViAUInt16 buf16);
    ViStatus _VI_FUNC viMoveOut16(ViSession vi, ViUInt16 space, ViBusAddress offset,
                                  ViBusSize length, ViAUInt16 buf16);
    ViStatus _VI_FUNC viMoveIn32(ViSession vi, ViUInt16 space, ViBusAddress offset,
                                 ViBusSize length, ViAUInt32 buf32);
    ViStatus _VI_FUNC viMoveOut32(ViSession vi, ViUInt16 space, ViBusAddress offset,
                                  ViBusSize length, ViAUInt32 buf32);
    ViStatus _VI_FUNC viMoveIn64(ViSession vi, ViUInt16 space, ViBusAddress offset,
                                 ViBusSize length, ViAUInt64 buf64);
    ViStatus _VI_FUNC viMoveOut64(ViSession vi, ViUInt16 space, ViBusAddress offset,
                                  ViBusSize length, ViAUInt64 buf64);
    ViStatus _VI_FUNC viMoveIn8Ex(ViSession vi, ViUInt16 space, ViBusAddress64 offset,
                                  ViBusSize length, ViAUInt8 buf8);
    ViStatus _VI_FUNC viMoveOut8Ex(ViSession vi, ViUInt16 space, ViBusAddress64 offset,
                                   ViBusSize length, ViAUInt8 buf8);
    ViStatus _VI_FUNC viMoveIn16Ex(ViSession vi, ViUInt16 space, ViBusAddress64 offset,
                                   ViBusSize length, ViAUInt16 buf16);
    ViStatus _VI_FUNC viMoveOut16Ex(ViSession vi, ViUInt16 space, ViBusAddress64 offset,
                                    ViBusSize length, ViAUInt16 buf16);
    ViStatus _VI_FUNC viMoveIn32Ex(ViSession vi, ViUInt16 space, ViBusAddress64 offset,
                                   ViBusSize length, ViAUInt32 buf32);
    ViStatus _VI_FUNC viMoveOut32Ex(ViSession vi, ViUInt16 space, ViBusAddress64 offset,
                                    ViBusSize length, ViAUInt32 buf32);
    ViStatus _VI_FUNC viMoveIn64Ex(ViSession vi, ViUInt16 space, ViBusAddress64 offset,
                                   ViBusSize length, ViAUInt64 buf64);
    ViStatus _VI_FUNC viMoveOut64Ex(ViSession vi, ViUInt16 space, ViBusAddress64 offset,
                                    ViBusSize length, ViAUInt64 buf64);
    ViStatus _VI_FUNC viMove(ViSession vi, ViUInt16 srcSpace, ViBusAddress srcOffset,
                             ViUInt16 srcWidth, ViUInt16 destSpace,
                             ViBusAddress destOffset, ViUInt16 destWidth,
                             ViBusSize srcLength);
    ViStatus _VI_FUNC viMoveAsync(ViSession vi, ViUInt16 srcSpace, ViBusAddress srcOffset,
                                  ViUInt16 srcWidth, ViUInt16 destSpace,
                                  ViBusAddress destOffset, ViUInt16 destWidth,
                                  ViBusSize srcLength, ViPJobId jobId);
    ViStatus _VI_FUNC viMoveEx(ViSession vi, ViUInt16 srcSpace, ViBusAddress64 srcOffset,
                               ViUInt16 srcWidth, ViUInt16 destSpace,
                               ViBusAddress64 destOffset, ViUInt16 destWidth,
                               ViBusSize srcLength);
    ViStatus _VI_FUNC viMoveAsyncEx(ViSession vi, ViUInt16 srcSpace, ViBusAddress64 srcOffset,
                                    ViUInt16 srcWidth, ViUInt16 destSpace,
                                    ViBusAddress64 destOffset, ViUInt16 destWidth,
                                    ViBusSize srcLength, ViPJobId jobId);
    ViStatus _VI_FUNC viMapAddress(ViSession vi, ViUInt16 mapSpace, ViBusAddress mapOffset,
                                   ViBusSize mapSize, ViBoolean access,
                                   ViAddr suggested, ViPAddr address);
    ViStatus _VI_FUNC viUnmapAddress(ViSession vi);
    ViStatus _VI_FUNC viMapAddressEx(ViSession vi, ViUInt16 mapSpace, ViBusAddress64 mapOffset,
                                     ViBusSize mapSize, ViBoolean access,
                                     ViAddr suggested, ViPAddr address);
    void _VI_FUNC viPeek8(ViSession vi, ViAddr address, ViPUInt8 val8);
    void _VI_FUNC viPoke8(ViSession vi, ViAddr address, ViUInt8 val8);
    void _VI_FUNC viPeek16(ViSession vi, ViAddr address, ViPUInt16 val16);
    void _VI_FUNC viPoke16(ViSession vi, ViAddr address, ViUInt16 val16);
    void _VI_FUNC viPeek32(ViSession vi, ViAddr address, ViPUInt32 val32);
    void _VI_FUNC viPoke32(ViSession vi, ViAddr address, ViUInt32 val32);
    void _VI_FUNC viPeek64(ViSession vi, ViAddr address, ViPUInt64 val64);
    void _VI_FUNC viPoke64(ViSession vi, ViAddr address, ViUInt64 val64);
    /*- Shared Memory Operations ------------------------------------------------*/

    ViStatus _VI_FUNC viMemAlloc(ViSession vi, ViBusSize size, ViPBusAddress offset);
    ViStatus _VI_FUNC viMemFree(ViSession vi, ViBusAddress offset);
    ViStatus _VI_FUNC viMemAllocEx(ViSession vi, ViBusSize size, ViPBusAddress64 offset);
    ViStatus _VI_FUNC viMemFreeEx(ViSession vi, ViBusAddress64 offset);