src/prebind/bindings.rs

extern "system" {
    pub fn viWaitOnEvent(
        vi: ViSession,
        inEventType: ViEventType,
        timeout: ViUInt32,
        outEventType: ViPEventType,
        outContext: ViPEvent,
    ) -> ViStatus;
}
extern "system" {
    pub fn viInstallHandler(
        vi: ViSession,
        eventType: ViEventType,
        handler: ViHndlr,
        userHandle: ViAddr,
    ) -> ViStatus;
}
extern "system" {
    pub fn viUninstallHandler(
        vi: ViSession,
        eventType: ViEventType,
        handler: ViHndlr,
        userHandle: ViAddr,
    ) -> ViStatus;
}
extern "system" {
    pub fn viRead(vi: ViSession, buf: ViPBuf, cnt: ViUInt32, retCnt: ViPUInt32) -> ViStatus;
}
extern "system" {
    pub fn viReadAsync(vi: ViSession, buf: ViPBuf, cnt: ViUInt32, jobId: ViPJobId) -> ViStatus;
}
extern "system" {
    pub fn viReadToFile(
        vi: ViSession,
        filename: ViConstString,
        cnt: ViUInt32,
        retCnt: ViPUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viWrite(vi: ViSession, buf: ViConstBuf, cnt: ViUInt32, retCnt: ViPUInt32) -> ViStatus;
}
extern "system" {
    pub fn viWriteAsync(vi: ViSession, buf: ViConstBuf, cnt: ViUInt32, jobId: ViPJobId)
        -> ViStatus;
}
extern "system" {
    pub fn viWriteFromFile(
        vi: ViSession,
        filename: ViConstString,
        cnt: ViUInt32,
        retCnt: ViPUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viAssertTrigger(vi: ViSession, protocol: ViUInt16) -> ViStatus;
}
extern "system" {
    pub fn viReadSTB(vi: ViSession, status: ViPUInt16) -> ViStatus;
}
extern "system" {
    pub fn viClear(vi: ViSession) -> ViStatus;
}
extern "system" {
    pub fn viSetBuf(vi: ViSession, mask: ViUInt16, size: ViUInt32) -> ViStatus;
}
extern "system" {
    pub fn viFlush(vi: ViSession, mask: ViUInt16) -> ViStatus;
}
extern "system" {
    pub fn viBufWrite(vi: ViSession, buf: ViConstBuf, cnt: ViUInt32, retCnt: ViPUInt32)
        -> ViStatus;
}
extern "system" {
    pub fn viBufRead(vi: ViSession, buf: ViPBuf, cnt: ViUInt32, retCnt: ViPUInt32) -> ViStatus;
}
extern "C" {
    pub fn viPrintf(vi: ViSession, writeFmt: ViConstString, ...) -> ViStatus;
}
extern "system" {
    pub fn viVPrintf(vi: ViSession, writeFmt: ViConstString, params: ViVAList) -> ViStatus;
}
extern "C" {
    pub fn viSPrintf(vi: ViSession, buf: ViPBuf, writeFmt: ViConstString, ...) -> ViStatus;
}
extern "system" {
    pub fn viVSPrintf(
        vi: ViSession,
        buf: ViPBuf,
        writeFmt: ViConstString,
        parms: ViVAList,
    ) -> ViStatus;
}
extern "C" {
    pub fn viScanf(vi: ViSession, readFmt: ViConstString, ...) -> ViStatus;
}
extern "system" {
    pub fn viVScanf(vi: ViSession, readFmt: ViConstString, params: ViVAList) -> ViStatus;
}
extern "C" {
    pub fn viSScanf(vi: ViSession, buf: ViConstBuf, readFmt: ViConstString, ...) -> ViStatus;
}
extern "system" {
    pub fn viVSScanf(
        vi: ViSession,
        buf: ViConstBuf,
        readFmt: ViConstString,
        parms: ViVAList,
    ) -> ViStatus;
}
extern "C" {
    pub fn viQueryf(
        vi: ViSession,
        writeFmt: ViConstString,
        readFmt: ViConstString,
        ...
    ) -> ViStatus;
}
extern "system" {
    pub fn viVQueryf(
        vi: ViSession,
        writeFmt: ViConstString,
        readFmt: ViConstString,
        params: ViVAList,
    ) -> ViStatus;
}
extern "system" {
    pub fn viIn8(vi: ViSession, space: ViUInt16, offset: ViBusAddress, val8: ViPUInt8) -> ViStatus;
}
extern "system" {
    pub fn viOut8(vi: ViSession, space: ViUInt16, offset: ViBusAddress, val8: ViUInt8) -> ViStatus;
}
extern "system" {
    pub fn viIn16(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        val16: ViPUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viOut16(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        val16: ViUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viIn32(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        val32: ViPUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viOut32(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        val32: ViUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viIn64(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        val64: ViPUInt64,
    ) -> ViStatus;
}
extern "system" {
    pub fn viOut64(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        val64: ViUInt64,
    ) -> ViStatus;
}
extern "system" {
    pub fn viIn8Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        val8: ViPUInt8,
    ) -> ViStatus;
}
extern "system" {
    pub fn viOut8Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        val8: ViUInt8,
    ) -> ViStatus;
}
extern "system" {
    pub fn viIn16Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        val16: ViPUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viOut16Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        val16: ViUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viIn32Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        val32: ViPUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viOut32Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        val32: ViUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viIn64Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        val64: ViPUInt64,
    ) -> ViStatus;
}
extern "system" {
    pub fn viOut64Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        val64: ViUInt64,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveIn8(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        length: ViBusSize,
        buf8: ViAUInt8,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveOut8(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        length: ViBusSize,
        buf8: ViAUInt8,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveIn16(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        length: ViBusSize,
        buf16: ViAUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveOut16(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        length: ViBusSize,
        buf16: ViAUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveIn32(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        length: ViBusSize,
        buf32: ViAUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveOut32(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        length: ViBusSize,
        buf32: ViAUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveIn64(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        length: ViBusSize,
        buf64: ViAUInt64,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveOut64(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress,
        length: ViBusSize,
        buf64: ViAUInt64,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveIn8Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        length: ViBusSize,
        buf8: ViAUInt8,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveOut8Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        length: ViBusSize,
        buf8: ViAUInt8,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveIn16Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        length: ViBusSize,
        buf16: ViAUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveOut16Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        length: ViBusSize,
        buf16: ViAUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveIn32Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        length: ViBusSize,
        buf32: ViAUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveOut32Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        length: ViBusSize,
        buf32: ViAUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveIn64Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        length: ViBusSize,
        buf64: ViAUInt64,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveOut64Ex(
        vi: ViSession,
        space: ViUInt16,
        offset: ViBusAddress64,
        length: ViBusSize,
        buf64: ViAUInt64,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMove(
        vi: ViSession,
        srcSpace: ViUInt16,
        srcOffset: ViBusAddress,
        srcWidth: ViUInt16,
        destSpace: ViUInt16,
        destOffset: ViBusAddress,
        destWidth: ViUInt16,
        srcLength: ViBusSize,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveAsync(
        vi: ViSession,
        srcSpace: ViUInt16,
        srcOffset: ViBusAddress,
        srcWidth: ViUInt16,
        destSpace: ViUInt16,
        destOffset: ViBusAddress,
        destWidth: ViUInt16,
        srcLength: ViBusSize,
        jobId: ViPJobId,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveEx(
        vi: ViSession,
        srcSpace: ViUInt16,
        srcOffset: ViBusAddress64,
        srcWidth: ViUInt16,
        destSpace: ViUInt16,
        destOffset: ViBusAddress64,
        destWidth: ViUInt16,
        srcLength: ViBusSize,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMoveAsyncEx(
        vi: ViSession,
        srcSpace: ViUInt16,
        srcOffset: ViBusAddress64,
        srcWidth: ViUInt16,
        destSpace: ViUInt16,
        destOffset: ViBusAddress64,
        destWidth: ViUInt16,
        srcLength: ViBusSize,
        jobId: ViPJobId,
    ) -> ViStatus;
}
extern "system" {
    pub fn viMapAddress(
        vi: ViSession,
        mapSpace: ViUInt16,
        mapOffset: ViBusAddress,
        mapSize: ViBusSize,
        access: ViBoolean,
        suggested: ViAddr,
        address: ViPAddr,
    ) -> ViStatus;
}
extern "system" {
    pub fn viUnmapAddress(vi: ViSession) -> ViStatus;
}
extern "system" {
    pub fn viMapAddressEx(
        vi: ViSession,
        mapSpace: ViUInt16,
        mapOffset: ViBusAddress64,
        mapSize: ViBusSize,
        access: ViBoolean,
        suggested: ViAddr,
        address: ViPAddr,
    ) -> ViStatus;
}
extern "system" {
    pub fn viPeek8(vi: ViSession, address: ViAddr, val8: ViPUInt8);
}
extern "system" {
    pub fn viPoke8(vi: ViSession, address: ViAddr, val8: ViUInt8);
}
extern "system" {
    pub fn viPeek16(vi: ViSession, address: ViAddr, val16: ViPUInt16);
}
extern "system" {
    pub fn viPoke16(vi: ViSession, address: ViAddr, val16: ViUInt16);
}
extern "system" {
    pub fn viPeek32(vi: ViSession, address: ViAddr, val32: ViPUInt32);
}
extern "system" {
    pub fn viPoke32(vi: ViSession, address: ViAddr, val32: ViUInt32);
}
extern "system" {
    pub fn viPeek64(vi: ViSession, address: ViAddr, val64: ViPUInt64);
}
extern "system" {
    pub fn viPoke64(vi: ViSession, address: ViAddr, val64: ViUInt64);
}
extern "system" {
    pub fn viMemAlloc(vi: ViSession, size: ViBusSize, offset: ViPBusAddress) -> ViStatus;
}
extern "system" {
    pub fn viMemFree(vi: ViSession, offset: ViBusAddress) -> ViStatus;
}
extern "system" {
    pub fn viMemAllocEx(vi: ViSession, size: ViBusSize, offset: ViPBusAddress64) -> ViStatus;
}
extern "system" {
    pub fn viMemFreeEx(vi: ViSession, offset: ViBusAddress64) -> ViStatus;
}
